# ontocast

./: .cursorignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  README.md  graph.mmd  mkdocs.yml  pyproject.toml  shell.nix
.cursor/rules/: python-run.mdc  python-style.mdc
.github/workflows/: build-docs.yml  pypi-publish.yml
data/: __init__.py
docker/: README.md  __init__.py
docker/fuseki/: .env.example
docker/neo4j/: .env.example  docker-compose.yml
docker/qdrant/: .env.example  docker-compose.yml
docs/: contributing.md  index.md
docs/assets/: facts_loop.mmd  facts_loop_evidence.mmd  graph.mmd  ontology_loop.mmd  ontology_loop_evidence.mmd
docs/getting_started/: quickstart.md
docs/reference/: config.md
docs/user_guide/: aggregation.md  api.md  concepts.md  configuration.md  llm_caching.md  ontology_context.md  tenancy.md  triple_stores.md  user_instructions.md  workflow.md
ontocast/: __init__.py  _version.py  config.py  toolbox.py  util.py
ontocast/agent/: __init__.py  check_chunks.py  chunk_text.py  common.py  convert_document.py  criticise_facts.py  criticise_ontology.py  external_evidence.py  normalize_ontology.py  render_facts.py  render_ontology.py  select_ontology.py  select_ontology_catalog.py  serialize.py  sublimate_ontology.py  summarize_chunks.py
ontocast/api/: app.py  match_models.py  ontologies.py  parse.py  process_helpers.py  process_request.py  responses.py  schemas.py  tenancy_resolution.py
ontocast/cli/: __init__.py  batch_process.py  cmp_states.py  http_parse.py  match_graphs.py  merge_ontologies.py  pdfs_to_markdown.py  plot_graph.py  process_request.py  serve.py  server.py  split_chunks.py
ontocast/config/: __init__.py  settings.py
ontocast/onto/: chunk.py  constants.py  content_unit.py  docling_helpers.py  embedding_policy.py  enum.py  facts.py  iri_policy.py  llm_graph_payload.py  model.py  ontology.py  ontology_access.py  ontology_operations.py  rdfgraph.py  retrieval_capabilities.py  section_models.py  sparql_models.py  state.py  tenancy.py  unit_states.py  util.py
ontocast/prompt/: __init__.py  common.py  criticise_facts.py  criticise_ontology.py  facts_guidelines.py  (+8 more)
test/: __init__.py  conftest.py  docling_test_helpers.py  qdrant_util.py  test_00_validation.py  test_agent_facts.py  test_aggregation_config.py  test_aggregator.py  test_api_tenancy_resolution.py  test_budget_tracker.py  test_chunk_prepare.py  test_chunk_sizing.py  test_cli_server.py  test_convert_document_fixed_catalog.py  test_entity_aligner.py  test_filesystem_manager.py  test_fuseki_uri_normalization.py  test_graph_atomizer_facts.py  test_graph_format_profile.py  test_graph_update.py  test_in_memory_manager.py  test_induced_subgraph_quality.py  test_iri_policy.py  test_lancedb_vector_store.py  test_llm_batch.py  test_llm_cache.py  test_llm_config.py  test_llm_setup.py  test_llm_usage.py  test_match_derivation.py  test_match_models.py  test_ontology_access.py  test_ontology_context_mode.py  test_ontology_lineage_refresh.py  test_ontology_manager.py  test_ontology_selection_user_instruction.py  test_pipeline.py  test_qdrant_embedding_contract.py  test_qdrant_smoke.py  test_rdfgraph_turtle_parsing.py  (+13 more)
(+159 files in other folders)
